--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                         es posible?
                         ResDei Restaurante te complace
                     </p>
+                    <p> SI quieres conocer más de nuestros platos, como se elaboran, y que ingredientes usamos en cada uno de ellos no dudes en contactarnos o dejarnos tus comentarios en nuestra sección de comentarios.</p>
                 </article>
             </section>
         </div>
