--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
     <main class="reg">
         <section class="registro">
             <h3>Formulario de Registro</h3>
-            <p>En esta sección podrás contactarte para dejar tus comentarios o sugerencias, estaremos gustosos de de
+            <p>En esta sección podrás contactarte para dejar tus comentarios o sugerencias, estaremos gustosos de
                 atenderte.</p>
 
             <form action="" method="POST">
